Improve and document echo (formerly: transmogrify) server